--- a/Recipe_Management_System/vege/templates/receipe_list.html
+++ b/Recipe_Management_System/vege/templates/receipe_list.html
@@ -13,7 +13,11 @@
   </head>
   <body>
     <div class="container mt-5">
-      <form class="col-6 mx-auto card p-3 shadow-1g" method="POST" enctype="multipart/form-data">
+      <form
+        class="col-6 mx-auto card p-3 shadow-1g"
+        method="POST"
+        enctype="multipart/form-data"
+      >
         {% csrf_token %}
         <h2>Add Receipe</h2>
         <hr />
@@ -21,13 +25,22 @@
           <label for="exampleInputEmail1" class="form-label"
             >Receipe name</label
           >
-          <input name="receipe_name" required type="text" class="form-control" />
+          <input
+            name="receipe_name"
+            required
+            type="text"
+            class="form-control"
+          />
         </div>
         <div class="mb-3">
           <label for="exampleInputPassword1" class="form-label"
             >Receipe description</label
           >
-          <textarea name="receipe_description" required class="form-control"></textarea>
+          <textarea
+            name="receipe_description"
+            required
+            class="form-control"
+          ></textarea>
         </div>
         <div class="mb-3">
           <label for="exampleInputPassword1" class="form-label"
@@ -38,6 +51,27 @@
 
         <button type="submit" class="btn btn-success">Add Recipe</button>
       </form>
+
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">Recipe Name</th>
+            <th scope="col">Description</th>
+            <th scope="col">Image</th>
+          </tr>
+        </thead>
+        <tbody>
+          {% for recipe in receipe_list %}
+          <tr>
+            <th scope="row">{{ forloop.counter }}</th>
+            <td>{{ recipe.receipe_name }}</td>
+            <td>{{ recipe.receipe_description }}</td>
+            <td><img src="/media/{{ recipe.receipe_image }}" width="100" height="100"></td>
+          </tr>
+          {% endfor %}
+        </tbody>
+      </table>
     </div>
   </body>
 </html>
