--- a/Recipe_Management_System/vege/templates/receipe_list.html
+++ b/Recipe_Management_System/vege/templates/receipe_list.html
@@ -59,15 +59,19 @@
             <th scope="col">Recipe Name</th>
             <th scope="col">Description</th>
             <th scope="col">Image</th>
+            <th scope="col">Actions</th>
           </tr>
         </thead>
         <tbody>
-          {% for recipe in receipe_list %}
+          {% for receipe in receipe_list %}
           <tr>
             <th scope="row">{{ forloop.counter }}</th>
-            <td>{{ recipe.receipe_name }}</td>
-            <td>{{ recipe.receipe_description }}</td>
-            <td><img src="/media/{{ recipe.receipe_image }}" width="100" height="100"></td>
+            <td>{{ receipe.receipe_name }}</td>
+            <td>{{ receipe.receipe_description }}</td>
+            <td><img src="/media/{{ receipe.receipe_image }}" width="100" height="100"></td>
+            <td>
+              {% comment %} <a href="{% url 'edit_receipe' receipe.id %}" class="btn btn-primary btn-sm">Edit</a> {% endcomment %}
+              <a href="{% url 'delete_receipe' receipe.id %}" class="btn btn-danger btn-sm">Delete</a>
           </tr>
           {% endfor %}
         </tbody>
